--- a/JSNews/Base.lproj/Main.storyboard
+++ b/JSNews/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
         <!--Activities-->
         <scene sceneID="HXk-kc-S2l">
             <objects>
-                <tableViewController id="EHR-r2-Cnu" sceneMemberID="viewController">
+                <tableViewController id="EHR-r2-Cnu" customClass="ActivitiesTableViewController" customModule="JSNews" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="WsM-hx-dEw">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
